--- a/weatherstation/src/app/home/forecast-item/forecast-item.component.scss
+++ b/weatherstation/src/app/home/forecast-item/forecast-item.component.scss
@@ -1,5 +1,5 @@
 mat-card {
-    width: 40%;
+    width: 38%;
     margin: 5px;
     float: left;
 }
@@ -10,6 +10,7 @@ mat-card {
 }
 
 .sub {
+    font-size: 90%;
     color: rgba(255, 255, 255, .7);
     width: 100%;
     margin-left: 5px;
