--- a/weatherstation/src/app/home/weather-now/weather-now.component.html
+++ b/weatherstation/src/app/home/weather-now/weather-now.component.html
@@ -7,7 +7,7 @@
         <mat-grid-list cols="2" rowHeight="20px">
             <mat-grid-tile colspan="1" rowspan="5">
                 <img src="http://openweathermap.org/img/wn/{{WeatherNow.weather[0].icon}}@2x.png" />
-                <span class="temp">{{WeatherNow.main.temp | number:'1.0-0'}}°C</span>
+                <span class="temp">{{WeatherNow.main.temp | number:'1.0-0'}}</span>
             </mat-grid-tile>
             <mat-grid-tile colspan="1" rowspan="1">
                 <mat-icon>wb_cloudy</mat-icon>
